# messages-email-sender

./: .dockerignore  .env.sample  Cargo.toml  Dockerfile  README.md  run.sh
src/: main.rs
